# peon

./: .gitignore  pyproject.toml
examples/: example_cli.md
src/peon/: __init__.py  __main__.py  axe.py  routines.py  talk.py  work_work.py
src/routines/: example.yaml  meta_example.yaml
